After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667099 - SoupRequestHTTP leaks its content type string
SoupRequestHTTP leaks its content type string
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: HTTP Transport
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2012-01-01 18:13 UTC by Xan Lopez
Modified: 2012-01-04 20:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
souprequesthttpleak.diff (1.58 KB, patch)
2012-01-01 18:14 UTC, Xan Lopez
committed Details | Review

Description Xan Lopez 2012-01-01 18:13:33 UTC
==27620== 52 bytes in 5 blocks are definitely lost in loss record 7,122 of 12,826
==27620==    at 0x4A074CD: malloc (vg_replace_malloc.c:236)
==27620==    by 0x70E9F5F: standard_malloc (gmem.c:85)
==27620==    by 0x70E9FE8: g_malloc (gmem.c:159)
==27620==    by 0x70EA29E: g_malloc_n (gmem.c:361)
==27620==    by 0x7104224: g_strdup (gstrfuncs.c:356)
==27620==    by 0x6E193F8: idle_return_from_cache_cb (soup-request-http.c:188)
==27620==    by 0x70E446F: g_idle_dispatch (gmain.c:4632)
==27620==    by 0x70E1D45: g_main_dispatch (gmain.c:2513)
==27620==    by 0x70E2A06: g_main_context_dispatch (gmain.c:3050)
==27620==    by 0x70E2BE9: g_main_context_iterate (gmain.c:3121)
==27620==    by 0x70E2CAD: g_main_context_iteration (gmain.c:3182)
==27620==    by 0x6F60AA9: g_application_run (gapplication.c:1599)
==27620==    by 0x42D011: main (ephy-main.c:472)
Comment 1 Xan Lopez 2012-01-01 18:14:10 UTC
Created attachment 204426 [details] [review]
souprequesthttpleak.diff
Comment 2 Dan Winship 2012-01-03 17:11:41 UTC
Comment on attachment 204426 [details] [review]
souprequesthttpleak.diff

ok, though i'm generally not a fan of valgrind-output-in-commit-messages
Comment 3 Xan Lopez 2012-01-04 20:00:59 UTC
Comment on attachment 204426 [details] [review]
souprequesthttpleak.diff

Pushed as 78382ce5e41e26d51126ccf38181408f90dfab2f without the valgrind foo in the message.
Comment 4 Xan Lopez 2012-01-04 20:01:12 UTC
Closing.