soup-request-http: plug leak

The content type of the request is never freed.

https://bugzilla.gnome.org/show_bug.cgi?id=667099